small jumpto links on desktop sizing fix

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -228,16 +228,27 @@
   }
 
   &:not(:global(.small)) {
+    // text-h3
     font-size: 1.5rem;
     line-height: 1.167;
     -webkit-text-stroke-width: 0.15px;
   }
   &:global(.small) {
-    @extend .text-body;
+    // text-body
+    font-size: 1rem;
+    line-height: 1.25;
+    -webkit-text-stroke-width: 0.05px;
   }
 
   @media (min-width: $breakpoint-tablet) {
+    &:global(.small) {
+      // text-body-caption
+      font-size: 0.875rem;
+      line-height: 1.42;
+      -webkit-text-stroke-width: 0.1px;
+    }
     &:not(&:global(.small)) {
+      // text-body-large
       font-size: 1.25rem;
       line-height: 1.2;
       -webkit-text-stroke-width: 0.15px;
